<?xml version="1.0" encoding="utf-8"?>

<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/coordinator_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@null">
        <!-- clear out the default ?colorPrimary background as it interferes with the
             shared element transition on L+ -->
        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:titleEnabled="false">

            <ImageView
                android:id="@+id/header_image"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:scaleType="centerCrop"
                android:transitionName="@string/transition_track_header"
                app:layout_collapseMode="parallax"/>

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                app:layout_collapseMode="pin">

                <!--<TextView-->
                <!--android:id="@+id/title"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="match_parent"-->
                <!--android:gravity="center_vertical|start|left"-->
                <!--android:textAppearance="@style/TextAppearance.Widget.AppCompat.Toolbar.Title"-->
                <!--android:textColor="?android:textColorSecondary"-->
                <!--android:text="Title"-->
                <!--android:ellipsize="end"-->
                <!--android:transitionName="@string/transit_card_title" />-->

            </android.support.v7.widget.Toolbar>

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <View
            android:id="@+id/my_view_big"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@drawable/btn_rectangle"
            android:transitionName="@string/transit_view"/>

        <TextView
            android:id="@+id/title"
            style="@style/TextAppearance.AppCompat.Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:padding="@dimen/activity_horizontal_margin"
            android:text="Test"
            android:transitionName="@string/transit_card_title"/>

        <ImageView
            android:id="@+id/img_big"
            android:visibility="invisible"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:src="@drawable/img_cake"
            android:transitionName="@string/transit_image"/>

    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>